# mcp_motherduck

./: .gitignore  README.md  pyproject.toml
src/mcp_bigquery_biomedical/: database.py  handlers.py  memo_manager.py  server.py  tools.py
src/mcp_bigquery_biomedical/resources/: database_schema.json
src/mcp_motherduck/: __init__.py  database.py  handlers.py  memo_manager.py  prompts.py  resources.py  server.py  tools.py
src/mcp_motherduck/resources/: database_schema.json
src/mcp_server_aact/: database.py  handlers.py  memo_manager.py  server.py  tools.py
src/mcp_server_mcp_bigquery_biomedical/: __init__.py  database.py  memo_manager.py  prompt_config.py  resources.py  server.py  tools.py
src/mcp_server_motherduck/: __init__.py  database.py  handlers.py  memo_manager.py  prompts.py  resources.py  server.py  tools.py
tests/: test_aact_server.py  test_memo_manager.py  test_tools.py
