[project]
name = "mcp-server-motherduck"
version = "0.0.1"
description = "MCP server for Motherduck"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "duckdb",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mcp-server-motherduck = "mcp_server_motherduck:main"
